Feat: 조회한 일기가 존재하지 않을때 에러 처리